# crab-llm-scratch

./: .gitignore  Cargo.toml  README.md
chapters/ch02_text_processing/: Cargo.toml
chapters/ch02_text_processing/src/listing/: create_sample_vocab.rs  list_02_create_sample_vocab.rs  list_03_text_tokenizer.rs  list_03_text_tokenizer_v1.rs  list_04_text_tokenizer_v2.rs  list_05_gpt_dataset_v1.rs  list_06_dataloader_v1.rs  mod.rs  read_sample_text.rs
chapters/ch03_attention/: Cargo.toml
chapters/ch03_attention/src/: lib.rs  test_utils.rs
chapters/ch03_attention/src/listing/: list_01_self_attention_v1.rs  list_02_self_attention_v2.rs  list_03_causal_attention.rs  list_04_muti_head_attention_wrapper.rs  list_05_multi_head_attention.rs  mod.rs
chapters/ch04_gpt_implementation/: Cargo.toml
chapters/ch04_gpt_implementation/src/: lib.rs  test_utils.rs
chapters/ch04_gpt_implementation/src/listing/: list_01_dummy_gpt_model.rs  list_02_layer_norm.rs  list_03_gelu.rs  list_04_feed_forward.rs  list_05_example_deep_neural_network.rs  list_06_transformer_block.rs  list_07_gpt_model.rs  list_08_generate_text.rs  mod.rs
chapters/ch05_pretraining/: Cargo.toml
chapters/ch05_pretraining/src/: lib.rs  test_utils.rs
chapters/ch05_pretraining/src/listing/: list_01_text_to_token.rs  list_02_calc_loss.rs  list_03_train_model_simple.rs  list_04_generate.rs  list_05_load_weights_into_gpt.rs  mod.rs
chapters/ch06_classification_tuning/: Cargo.toml
chapters/ch06_classification_tuning/src/: lib.rs  test_utils.rs
chapters/ch06_classification_tuning/src/listing/: list_01_download_dataset.rs  list_02_create_balanced_dataset.rs  list_03_split_dataset.rs  list_04_spam_dataset.rs  list_05_spam_data_loader.rs  list_06_download_and_load_gpt2.rs  list_07_add_classification_layer.rs  list_08_calc_accuracy_loader.rs  list_09_calc_loss_loader.rs  list_10_train_classifier.rs  list_11_plot_values.rs  list_12_classify_review.rs  mod.rs
chapters/ch07_instruction_tuning/: Cargo.toml
chapters/ch07_instruction_tuning/src/: test_utils.rs
chapters/ch07_instruction_tuning/src/listing/: list_01_download_and_load_file.rs  mod.rs
crates/candle_addons/: Cargo.toml
crates/candle_addons/src/: lib.rs  top_k.rs
