[workspace]
resolver = "3"
members = [
    "crates/candle_addons",
    "chapters/ch02_text_processing",
    "chapters/ch03_attention",
    "chapters/ch04_gpt_implementation",
    "chapters/ch05_pretraining",
    "chapters/ch06_classification_tuning",
    "chapters/ch07_instruction_tuning",
]

[workspace.package]
name = "crab-llm-scratch"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
regex = "1.12.2"
tiktoken-rs = "0.9.1"
candle-core = "0.9.1"
candle-datasets = "0.9.1"
candle-nn = "0.9.1"
rand = "0.9.2"
hf-hub = "0.4.3"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.148" }
serde_with = { version = "3.16.1" }
tempfile = { version = "3.24.0" }
