[package]
name = "ch04-gpt-implementation"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
tiktoken-rs = { workspace = true }
candle-core = { workspace = true }
candle-datasets = { workspace = true }
candle-nn = { workspace = true }
rand = { workspace = true }

ch03_attention = { path = "../ch03_attention" }